--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-dom": "^15.4.2",
     "react-router-dom": "^4.0.0",
     "react-tap-event-plugin": "^2.0.1",
-    "webpack": "^2.3.2"
+    "webpack": "^2.3.2",
+    "webpack-dev-middleware": "^1.10.1"
   },
   "devDependencies": {
     "file-loader": "^0.11.1",
