--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^15.4.2",
     "react-router-dom": "^4.0.0",
     "react-tap-event-plugin": "^2.0.1",
+    "url-loader": "^0.5.8",
     "webpack": "^2.3.2",
     "webpack-dev-middleware": "^1.10.1"
   },
@@ -33,7 +34,7 @@
     "webpack-dev-middleware": "^1.10.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "babel-node build/devserver.js",
     "dev": "babel-node build/devserver.js",
     "backend": "node Backend/Server.js",
     "android": "./src/utils/buildCordova.sh && cd Cordova && cordova run android && cd ../"
