--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "pg": "^6.1.5",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-markdown": "^2.5.0",
     "react-router-dom": "^4.0.0",
     "react-tap-event-plugin": "^2.0.1",
     "url-loader": "^0.5.8",
