--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "freshwater",
+  "name": "goldwater",
   "version": "1.0.0",
-  "description": "A Waterfront Educational Marketplace",
+  "description": "Personal website and blog",
   "main": "index.jsx",
   "dependencies": {
     "axios": "^0.16.0",
@@ -30,15 +30,29 @@
     "webpack-dev-middleware": "^1.10.1"
   },
   "devDependencies": {
+    "babel-jest": "^20.0.1",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "enzyme": "^2.8.2",
     "file-loader": "^0.11.1",
+    "jest": "^20.0.1",
+    "react-test-renderer": "^15.5.4",
     "url-loader": "^0.5.8",
     "webpack-dev-middleware": "^1.10.1"
   },
   "scripts": {
+    "test": "jest",
     "start": "node ./Backend/server.js",
     "dev": "babel-node build/devserver.js",
     "backend": "node Backend/Server.js",
     "android": "./src/utils/buildCordova.sh && cd Cordova && cordova run android && cd ../"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
+      "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js"
+    }
   },
   "repository": {
     "type": "git",
